update files to git

--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
-HOST= localhost
-USER=root
-PASSWORD=
-DATABASE=scripx
+PORT=3306
+HOST= bnjl1stubxq5ixhgzlxv-mysql.services.clever-cloud.com
+USER=upwpqrlvbh4hbohq
+PASSWORD=8erxy5lRtGhSJNGSzq63
+DATABASE=bnjl1stubxq5ixhgzlxv
